# embedded-lab

./: .gitignore  .gitmodules  LICENSE  Lingo.toml  Makefile  README.md  book.toml  diagram.json  flake.nix  overlay.nix  shell.nix  wokwi.toml
.github/workflows/: mdbook.yml
docs/: Gemfile  InstallingPicoTools.md  UsingLFPico.md  _config.yml  book.toml  index.md
docs/_posts/: 2023-06-12-welcome-to-jekyll.markdown
docs/src/: Acronyms.md  Chapter01.md  Debugger.md  GettingStarted.md  Hill.md  InstallLF.md  InstallLFPico.md  InstallVSCode.md  Installation.md  InstallingPicoTools.md  Instructors.md  Interrupts.md  Introduction.md  LF.md  Non-Nix.md  Peripherals.md  Prerequisites.md  Project.md  README.md  Resources.md  Robot.md  SUMMARY.md  Sensors.md  Tools.md  UbuntuVM.md  UsingLFPico.md  WindowsInstallation.md  chapter_1.md
docs/src/img/: 3pi-2040-pitch.ai  3pi-2040-roll.ai
lib/robot-lib/: CMakeLists.txt
lib/robot-lib/include/: pololu_3pi_2040_robot.h
lib/robot-lib/src/: battery.c  battery.h  button.c  button.h  imu.c  pololu_3pi_2040_robot.h
lib/robot_lib/: CMakeLists.txt
lib/robot_lib/include/: imu.h
nix/: lf.nix  lingo.nix  rp2040js.nix
platform/: CMakeLists.txt  CMakeLists_platform.txt  Platform.cmake  build_pico.sh  build_robot.sh  lf_pico_support.c  lf_pico_support.h  pico_config.txt  pico_setup.sh  platform.h  robot_lib.txt  setup.sh  test.sh
src/: AccTest.lf  AccelerometerDisplay.lf  AccelerometerPrintf.lf  Acronyms.md  Blink.lf  BtnTest.lf  Debugger.md  Documentation.md  EncoderTest.lf  GettingStarted.md  Hello.lf  HelloPico.lf  Hill.md  Institutions.md  Instructors.md  Interrupts.md  Line.md  MotorTest.lf  Non-Nix.md  Peripherals.md  Prerequisites.md  Project.md  README.md  Resources.md  Robot.md  SUMMARY.md  Sensors.md  SquareMotors.lf  Timer.lf  Timers.md  Tools.md  UbuntuVM.md  Windows.md  Wireless.md  ZephyrPico.lf
src/img/: 3pi-2040-roll.ai
src/lib/: Button.lf  Display.lf  Encoders.lf  Imu.lf  Led.lf  Line.lf  Motors.lf
src/tests/: AccTest.lf  BtnTest.lf  DisplayTest.lf  EncoderTest.lf  HelloPico.lf  MotorShell.lf  MotorTest.lf  MotorTestSimple.lf
test/: README.md  TestBed.lf  shell.nix  tick-clock.ts
